fixed sizing and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ form {
   background-color: #e6d8e1;
   width: 20%;
   margin: 5em auto;
-  font-size: 3em;
+  font-size: 2em;
   padding: 1em;
   text-align: start;
 }
@@ -20,8 +20,8 @@ button {
   width: 50%;
   margin: 2em auto;
   padding: 0.3em;
-  font-size: 1em;
-  margin-left: 1.8em;
+  font-size: 0.8em;
+  /* margin-left: 1.8em; */
 }
 
 .label-input-wrapper {
